Fixed bug in datepicker `meridian-divider` overflow

--- a/less/project/misc.less
+++ b/less/project/misc.less
@@ -1745,3 +1745,5 @@ div.fixed-table-scroll-outer {
 
 .select2-container--classic.select2-container--open .select2-dropdown {
     border-color: #5897fb; }
+
+.meridian-divider + .meridian-divider { display: none !important; }
